# Ball_bot

./: CMakeLists.txt  README.md  ball_bot_rviz.rviz  ballbot_rviz.rviz  package.xml
launch/: all_bots.launch  all_bots_size.launch  ball_bot.launch  ball_bot_125.launch  ball_bot_130.launch  ball_bot_cafe.launch  ball_bot_office.launch  ball_bot_office_world.launch  flat_bot.launch
meshes/: base.stl  wheel.stl  wheel_125.stl  wheel_130.stl  wheel_flat.stl
script/agents/: A1easyGo.py
urdf/: ball_bot.gazebo.xacro  ball_bot.urdf.xacro  ball_bot_125.urdf.xacro  ball_bot_130.urdf.xacro  flat_bot.urdf.xacro  flat_bot_140.urdf.xacro
worlds/: actually_empty_world.world  test.world  test_1.world
